--- a/discord-watchdog.service
+++ b/discord-watchdog.service
@@ -4,9 +4,9 @@ After=multi-user.target
 
 [Service]
 Type=idle
-ExecStart=/usr/bin/python3 /home/someone/Github/discord-watchdog/bot.py
+ExecStart=/usr/bin/python3 ./discord-watchdog/bot.py
 User=someone
-WorkingDirectory=/home/someone/Github/discord-watchdog
+WorkingDirectory=./discord-watchdog
 KillMode=process
 Restart=on-failure
 
